# bangla-nlp-tutorial

./: .gitignore  README.md  devcontainer.Dockerfile  environment.yml  macos.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
03_ngram_lm/: ngram_lm.ipynb
draft/: byte_pair_tokenisation.ipynb  ngram.ipynb  ngram_lm.ipynb  unigram.ipynb  word_vectors.ipynb
envs/: env_linux.yml  env_macos_intel.yml
